--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     	
     	   <p class = "day"> <a href = "day1.html" > day 1</a>: march 1st, 2016 </p>
            <p class = "day"> <a href = "day2.html" > day 2</a>: march 2nd, 2016 </p>
-           <p class = "day"> <a href = "day3.html" > day 3</a>: march 2nd, 2016 </p>
+           <p class = "day"> <a href = "day3.html" > day 3</a>: march 3rd, 2016 </p>
 
 <script
     ></script>
